Update and configure for heroku
